--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint .",
     "preview": "vite preview"
   },
-"proxy": "http://localhost:5000",
+  "proxy": "http://localhost:5000",
   "devDependencies": {
     "@eslint/js": "^9.11.1",
     "@types/react": "^18.3.10",
@@ -27,14 +27,16 @@
     "vite": "^5.4.8"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.4.0",
     "http-proxy-middleware": "^3.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.27.0",
     "react-slick": "^0.30.2"
   },
   "engines": {
-    "node": "16.x"
+    "node": "20.x"
   },
   "browserslist": [
     "last 2 versions"
